--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -15,6 +15,7 @@
 	
 	<ItemGroup>
 	  <ProjectReference Include="..\Web4.Core\Web4.Core.csproj" />
+	  <ProjectReference Include="..\Web4.Examples\Web4.Examples.csproj" />
 	  <ProjectReference Include="..\Web4.Index\Web4.Index.csproj" />
 	</ItemGroup>
 </Project>
