Start adding Image example page

--- a/Web4.Examples/Web4.Examples.csproj
+++ b/Web4.Examples/Web4.Examples.csproj
@@ -22,6 +22,9 @@
 	  <None Update="Templates\Examples\index.html.hbs">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
+	  <None Update="Templates\Examples\images.html.hbs">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 	
 </Project>
